feat: add unused import refactor